--- a/TrashAPI/requirements.txt
+++ b/TrashAPI/requirements.txt
@@ -1,55 +1,12 @@
 click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-contourpy==1.0.6
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.2.18
-debugpy==1.6.3
-decorator==5.1.1
-defer==1.0.6
-distro==1.7.0
-distro-info===1.1build1
-duplicity==0.8.21
-entrypoints==0.4
-executing==1.2.0
-fasteners==0.14.1
 Flask==2.2.2
 Flask-Cors==3.0.10
-flatbuffers==22.10.26
-fonttools==4.38.0
-future==0.18.2
-gast==0.4.0
-google-auth==2.14.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.50.0
-h5py==3.7.0
-httplib2==0.20.2
-idna==3.3
-imageio==2.22.4
-importlib-metadata==4.6.4
-install==1.3.5
-ipykernel==6.17.1
-ipython==8.6.0
-itsdangerous==2.1.2
-jedi==0.18.1
-jeepney==0.7.1
 Jinja2==3.1.2
 jupyter_client==7.4.5
 jupyter_core==5.0.0
 keras==2.10.0
 Keras-Preprocessing==1.1.2
-keyring==23.5.0
-kiwisolver==1.4.4
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-libclang==14.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
+keyring==23.5.0==1.3.1
 Mako==1.1.3
 Markdown==3.4.1
 MarkupSafe==2.1.1
@@ -102,13 +59,9 @@ pyzmq==24.0.1
 reportlab==3.6.8
 requests==2.25.1
 requests-oauthlib==1.3.1
-rsa==4.9
 scikit-image==0.19.3
 scipy==1.9.3
 seaborn==0.12.2
-SecretStorage==3.3.1
-six==1.16.0
-stack-data==0.6.1
 systemd-python==234
 tensorboard==2.10.1
 tensorboard-data-server==0.6.1
@@ -124,10 +77,6 @@ traitlets==5.5.0
 ufw==0.36.1
 unattended-upgrades==0.1
 urllib3==1.26.5
-usb-creator==0.3.7
-wadllib==1.3.6
-wcwidth==0.2.5
-Werkzeug==2.2.2
 wrapt==1.14.1
 xdg==5
 xkit==0.0.0
